--- a/css/resume.css
+++ b/css/resume.css
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: rgba(38, 211, 69, 0.73);
+  outline-color: #48d368;
 }
 
 @media (min-width: 992px) {
@@ -188,5 +188,5 @@ a {
 }
 
 a:hover, a:focus, a:active {
-  color: #278543;
+  color: #19692c;
 }
